# python-i3x-client

./: .gitignore  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml  smoketest.py
src/i3x/: __init__.py  _sse.py  _subscription.py  _transport.py  client.py  errors.py  models.py
tests/: conftest.py  test_client.py  test_models.py  test_transport.py
