[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "i3x-client"
version = "0.1.0"
description = "Python client library for I3X CMIP servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "I3X Working Group" },
]
keywords = ["i3x", "cmip", "iot", "building-automation", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.24.0",
    "httpx-sse>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/i3x/i3x-python"
Documentation = "https://github.com/i3x/i3x-python#readme"
Issues = "https://github.com/i3x/i3x-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/i3x"]
