[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "i3x-client"
version = "0.1.6"
description = "Python client library for i3X servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "CESMII" },
]
keywords = ["i3x", "iiot", "building-automation", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.24.0",
    "httpx-sse>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/cesmii/python-i3x-client"
Documentation = "https://github.com/cesmii/python-i3x-client#readme"
Issues = "https://github.com/cesmii/python-i3x-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/i3x"]
